[package]
name = "lattice-rootstore"
description = "Root store state layer for Lattice - manages app definitions and bundles"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lattice-model = { workspace = true }
lattice-store-base = { workspace = true }
lattice-storage = { workspace = true }
lattice-kvtable = { workspace = true }
lattice-kvstore = { workspace = true }
redb = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
prost-reflect = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "rt", "macros"] }
tracing = { workspace = true }
futures-util.workspace = true
tokio-stream = { version = "0.1.18", features = ["sync"] }
once_cell = "1"
zip = { version = "8.4.0", default-features = false, features = ["deflate"] }
toml = "1"
serde = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }

[dev-dependencies]
lattice-mockkernel = { workspace = true }
