[package]
name = "lattice-runtime"
description = "Lattice SDK and runtime - unified backend abstraction"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["core-stores"]
core-stores = ["dep:lattice-kvstore", "dep:lattice-logstore"]

[dependencies]
lattice-node = { workspace = true }
lattice-net = { workspace = true }
lattice-net-iroh = { workspace = true }
lattice-model = { workspace = true }
lattice-store-base = { workspace = true }
lattice-storage = { workspace = true }
lattice-systemstore = { workspace = true }
lattice-api = { workspace = true }
lattice-proto = { workspace = true }
lattice-kvstore = { workspace = true, optional = true }
lattice-logstore = { workspace = true, optional = true }
hex = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = "0.1"
prost = { workspace = true }
prost-reflect = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
futures.workspace = true
