[package]
name = "lattice-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
redb = { workspace = true }
thiserror = { workspace = true }
byteorder = "1.4"
uuid = { workspace = true }
blake3 = { workspace = true }
lattice-model = { workspace = true }
lattice-store-base = { workspace = true }
prost.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
[dev-dependencies]
tempfile = "3.8"
