[package]
name = "lattice-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
lattice-model = { workspace = true }
lattice-proto = { workspace = true }
async-trait = "0.1"
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
blake3 = "1"
tokio = { workspace = true, features = ["macros", "rt"] }
