[package]
name = "lattice-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
lattice-model = { workspace = true }
lattice-proto = { workspace = true }
async-trait = "0.1"
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
futures-core = "0.3"
thiserror = { workspace = true }

[dev-dependencies]
blake3 = "1"
